# multifactor-quant-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: ci.yml  nightly-etl.yml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  styles.css
docs/: roadmap.md
src/multifactor_platform/: __init__.py  config.py  data_quality.py
src/multifactor_platform/api/: main.py
src/multifactor_platform/backtesting/: costs.py  engine.py  metrics.py  portfolio.py
src/multifactor_platform/db/: models.py  persistence.py  session.py
src/multifactor_platform/features/: momentum.py  normalization.py  pipeline.py  quality.py  value.py  volatility.py
src/multifactor_platform/ingestion/: fundamentals.py  prices.py  sample_data.py  universe.py  yfinance_client.py
src/multifactor_platform/jobs/: __init__.py  common.py  compute_features.py  db_status.py  evaluate_models.py  ingest_prices.py  persist_snapshot.py  run_backtest.py
src/multifactor_platform/models/: elastic_net.py  linear_model.py  ml.py  random_forest.py  ranker.py  weighted_score.py  xgboost_model.py
src/multifactor_platform/optimization/: constraints.py  optimizer.py
src/multifactor_platform/risk/: __init__.py  exposures.py
src/multifactor_platform/utils/: platform_data.py  sample_app_data.py
tests/: test_api.py  test_backtesting.py  test_data_quality.py  test_features.py  test_jobs.py  test_ml_models.py  test_optimization.py  test_persistence.py  test_ranking.py  test_universe.py
