[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multifactor-platform"
version = "0.1.0"
description = "End-to-end multifactor equity ranking, backtesting, API, and dashboard platform."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pandas>=2.2",
  "numpy>=1.26",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "scikit-learn>=1.5",
  "yfinance>=0.2.40"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5"
]

[project.scripts]
mfp-ingest-prices = "multifactor_platform.jobs.ingest_prices:main"
mfp-compute-features = "multifactor_platform.jobs.compute_features:main"
mfp-run-backtest = "multifactor_platform.jobs.run_backtest:main"
mfp-persist-snapshot = "multifactor_platform.jobs.persist_snapshot:main"
mfp-db-status = "multifactor_platform.jobs.db_status:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
